# neon-v1.2.3

./: .gitignore  .last-changes.md  AUTOMATION_SUMMARY.md  ENHANCEMENT_INTEGRATION.md  README.md  package-lock.json  package.json  turbo.json
.github/workflows/: auto-import-commit.yml
.husky/: pre-commit
ContentCreator-0.1/: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  Makefile  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ContentCreator-0.1/.github/workflows/: ci-cd.yml  ci.yml
ContentCreator-0.1/config/: git_config.yml
ContentCreator-0.1/scripts/: README.md  docker-dev.sh  git_auto.py  git_pipeline.sh  setup-env.sh
ContentCreator-0.1/src/: __init__.py  main.py
ContentCreator-0.1/src/pipeline/: image_gen.py
ContentCreator-0.1/src/templates/: scene_parse_prompt.jinja2
ContentCreator-0.1/src/tests/: test_image_gen.py  test_main_cli.py  test_scene_parser.py  test_video_gen.py
ContentCreator-0.1/stories/: sample_story.txt
Neon.twitteragent/: .gitignore  ENHANCEMENT_SUMMARY.md  FEATURES.md  LICENSE  README.md  SUMMARY.md  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: theme-provider.tsx
content-pipeline/: scene_parser.py  video_gen.py
core/: metricsSync.ts  scheduler.ts
docs/: AUTOMATION_PIPELINE.md
lib/: api-client.ts  base-agent.ts  content-pipeline.ts  enhanced-integration.ts  enhanced-twitter-agent.ts  hooks.ts  media-generator.ts  scene-parser.ts  trpc.ts
scripts/: auto-commit.sh  setup-automation.sh  watch-and-commit.js
utils/: filters.ts
(+67 files in other folders)
